# Memory_Manager

./: .gitignore  CMakeLists.txt
assets/: capsule.m3if  player.m3if
src/: graphics.h  main.c  main.h  pause.h  utils.h
textures/: 0.xcf  Capsules.xcf  Untitled.xcf  background.xcf  background_template.xcf  bit_destuction_anim.xcf  flash.xcf  newplayer.xcf  player.xcf  warning_texture.xcf
